Added error handling genre controller Fixed some errors in web route
